# coriolis

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  coriolis_settings.txt
core/: audio.h  color.h  config.h  display.h  events.h  font.h  math8.h  palette.h  scene.h  settings.h  weather.h
docs/: AUDIO.md
firmware/: setup.ps1  smartmatrix-gcc11.patch
firmware/coriolis/: coriolis.ino
scenes/: clock_overlay.h  figure.h  guide_ui.h  intro.h  scene_analogclock.h  scene_aquarium.h  scene_aurora.h  scene_bounce.h  scene_breathe.h  scene_calendar.h  scene_clock.h  scene_coriolis.h  scene_exercise.h  scene_fire.h  scene_focus.h  scene_gifs.h  scene_life.h  scene_mandala.h  scene_plasma.h  scene_pong.h  scene_rain.h  scene_settings.h  scene_snake.h  scene_spiro.h  scene_starfield.h  scene_tetris.h  scene_weather.h  scene_wordclock.h  scene_yoga.h  toast.h
sim/: main.cpp
